<resources>
    <string name="app_name">Lyro</string>
    <string name="search">Search</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search lyrics for a song</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="appearance_header">Appearance</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_header">About</string>
    <string name="appinfo_text">Lyro v0.1 (licensed under GPLv3)</string>
    <string name="contact">https://github.com/hauptkern</string>

</resources>